# session-dialog

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: privesc.rs
src/: lib.rs  ui.rs
