[package]
name = "session-dialog"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Alessio Deiana <adeiana@gmail.com>"]
description = "Wayland session-lock confirmation dialogs"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["wgpu", "tiny-skia", "tokio", "wayland"] }
iced_sessionlock = { path = "/home/osso/Repos/exwlshelleventloop/iced_sessionlock", default-features = false, features = ["tiny-skia", "wgpu", "fira-sans"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
thiserror = "2"

[[bin]]
name = "session-dialog"
path = "src/bin/dialog.rs"

[[bin]]
name = "test-inline"
path = "src/bin/test_inline.rs"

[lib]
name = "session_dialog"
path = "src/lib.rs"
